AS#184520055700210, Dashboard/Status updates: new status composer should not be shown expanded -- Fixed with catch that right now it would collapse the composer even if any of the input or textarea contains some text

--- a/src/components/Feed/draftjs.scss
+++ b/src/components/Feed/draftjs.scss
@@ -1,5 +1,14 @@
 @import "tc-includes";
 
+
+.collapsedEditor {
+  display: none !important;
+}
+
+.expandedEditor {
+  display: block !important;
+}
+
 .public-DraftEditor-content {
   width: 100%;
   font-size: 15px;
